# FT_IRC

./: CMakeLists.txt  IRC  Makefile  README.md  a.out  channel.cpp  channel.hpp  commands.cpp  eco.cpp  ircserv  main.cpp  main2.cpp  main3.c  main42.cpp  prueba.cpp  server  server.cpp  server.hpp  split.cpp  user.cpp  user.hpp  utils.cpp  utils.hpp
a.out.dSYM/Contents/Resources/DWARF/: a.out
bot/: Bot.hpp  Makefile  User.cpp  User.hpp  a.out  bot.cpp  main.cpp  send  split.cpp  utils.hpp
bot/a.out.dSYM/Contents/Resources/DWARF/: a.out
client/: Makefile
client/incs/: client.h
client/incs/libft/: Makefile
client/incs/libft/incs/: libft.h
client/incs/libft/srcs/: ft_atoi.c  ft_memalloc.c  ft_memdel.c  ft_memset.c  ft_printf.c  ft_putendl_fd.c  ft_putnbr_base.c  ft_realloc.c  ft_strjoin.c  ft_strncmp.c  ft_strtrim.c  ft_uitoa.c  ft_ulitoa.c  opt_cdisu.c  width.c
client/incs/srcs/client/: client.c  cmd.c  connect.c  init.c  list.c  list2.c  main.c  util.c
cliente/: a.out  cliente  cliente2.cpp  main.cpp  server
command/: exit.cpp  invite.cpp  ison.cpp  join.cpp  kick.cpp  list.cpp  mode.cpp  names.cpp  nick.cpp  notice.cpp  oper.cpp  part.cpp  pass.cpp  pingPong.cpp  privmsg.cpp  quit.cpp  topic.cpp  userCmd.cpp  who.cpp
server/: Server.cpp  Server.hpp  messages.cpp
user/: User.hpp
